[package]
name = "libarchive3-sys"
version = "0.1.2"
authors = ["Jamie Winsor <reset@chef.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/chef/libarchive3-sys"
repository = "https://github.com/chef/libarchive3-sys.git"
documentation = "https://docs.rs/libarchive3-sys"
description = "Raw bindings for libarchive"
keywords = ["libarchive", "archive", "tar", "zip"]

[dependencies]
libc = "0.2.147"

[build-dependencies]
cc = "1.0.83"
pkg-config = "0.3.27"
quote = { version = "1.0.33", optional = true }
bindgen = { version = "0.68.1", optional = true }

[features]
generate-bindings = ["bindgen", "quote"]
doc-only = []

[package.metadata.docs.rs]
features = ["doc-only"]
